--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     ],
     "moduleResolution": "node",
     "module": "commonjs",
-    "target": "esnext",
+    "target": "es6",
     "inlineSourceMap": true
   },
   "exclude": [
